# fast-fluids

./: LICENSE  Makefile  README.md  pyproject.toml
.github/workflows/: check_version.yaml  lint_and_test.yaml
fast_fluids/: __main__.py
fast_fluids/domain/: grid.py
fast_fluids/utils/: pydantic_utils.py
tests/: test_pytest.py
tests/unit/domain/: test_grid.py
tests/unit/utils/: test_pydantic_utils.py
